Release notes 2.1.2

- Updated RocksDB to release 5.15.10
- Limit reorganization depth by mined money unlock window
- Poisson check during deep reorganization
- Burning bug and other bugs fixed
- Added GreenWallet (CLI wallet based on WalletGreen library)
- Various changes for compatibility with Karbo 
- Other various changes and fixes

Release notes 2.1.1

- Updated RocksDB to release 4.11.2
- Added two more seed nodes

Release notes 2.1.0

- Transaction pool issue fixes
- Daemon synchronization improvements

Release notes 2.0.7

- Wallet synchronization enhancements
- Daemon synchronization issue fix
- Daemon stability enhancements

Release notes 2.0.6

- Wallet synchronization enhancements
- Correct application closing
- Daemon stability enhancements

Release notes 2.0.5

- Fixed Bytecoin RPC Wallet hang issue

Release notes 2.0.4

- Fixed an issue where some users experienced daemon hanging
- Fixed block difficulty calculation issue

Release notes 2.0.3

- Stability enhancement
- Various improvements

Release notes 2.0.2

- Security algorithm enhancement
- Daemon synchronization issue fix
- Wallet minor bug fixes
- Bytecoin RPC Wallet log optimization

Release notes 2.0.1

- Bytecoin RPC Wallet API improvements

Release notes 2.0.0

- Completely revamped CryptoNote core
- Blockchain storage changed to DB

Release notes 1.0.11

- New Bytecoin Wallet file format
- Daemon loading optimization

Release notes 1.0.10

- Blocksize increase
- Fusion transactions for Bytecoin RPC Wallet
- Bytecoin RPC Wallet API improvements

Release notes 1.0.9

- New API for Bytecoin RPC Wallet
- Various improvements

Release notes 1.0.8

- Fusion transactions for Bytecoin Wallet
- IWallet high-level API update
- JSON RPC improvements
- Synchronization improvements for OS X

Release notes 1.0.7

- Fusion transactions support
- Various simplewallet improvements

Release notes 1.0.6

- High-level API update
- Aggregate multi-addresses for Bytecoin RPC Wallet